# src/settings/settings.controller.ts
@@ -1,9 +1,12 @@
-import { Controller, Post, Body, Get, Query } from "@nestjs/common";
+import { Controller, Post, Body, Get, Query, UsePipes, ValidationPipe } from "@nestjs/common";
 import { SettingsService } from "./settings.service";
 import { InitializeDto } from "./dto/initialize.dto";
 import { ApiTags, ApiOperation, ApiResponse, ApiQuery } from "@nestjs/swagger";
 import { LoggerService } from "src/logger/logger.service";
 import { Address, privateKeyToAddress } from "viem/accounts";
+import { Keypair } from "@solana/web3.js";
+import { bs58 } from "@project-serum/anchor/dist/cjs/utils/bytes";
+import { Wallet } from "@project-serum/anchor";
 
 @ApiTags("settings")
 @Controller("settings")
@@ -41,6 +44,7 @@ export class SettingsController {
   }
 
   @Post("initialize")
+  @UsePipes(new ValidationPipe({ transform: true }))
   @ApiOperation({ summary: "Initialize settings" })
   @ApiResponse({
     status: 200,
@@ -60,10 +64,16 @@ export class SettingsController {
     },
   })
   async initialize(@Body() params: InitializeDto) {
-    params.evmSettings.wallet = {
-      key: process.env.EVM_PRIVATE_KEY,
-      address: privateKeyToAddress(process.env.EVM_PRIVATE_KEY as Address),
-    };
+    // params.evmSettings.privateKey = process.env.EVM_PRIVATE_KEY;
+    // params.evmSettings.walletAddress = privateKeyToAddress(
+    //   process.env.EVM_PRIVATE_KEY as Address
+    // );
+
+    // const defaultPrivateKeyBytes = bs58.decode(process.env.SOLANA_PRIVATE_KEY);
+    // const wallet = new Wallet(Keypair.fromSecretKey(defaultPrivateKeyBytes));
+    // const solanaWalletAddress = wallet.publicKey.toBase58();
+    // params.solanaSettings.privateKey = process.env.SOLANA_PRIVATE_KEY;
+    // params.solanaSettings.walletAddress = solanaWalletAddress;
 
     await this.settingsService.saveInitialize(params);
     const results = await this.settingsService.initialize(params);
